# pixel-canvas

./: .gitignore  Cargo.toml  LICENSE.md  key  package-lock.json  package.json  palette.json  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: cache.yml  ci.yml  deploy.yml  github-pages-deploy.yml
api-server/: Cargo.toml  test
api-server/src/: main.rs
app/: eslint.config.js  package.json  save-image.html  tsconfig.json  vite.config.ts
app/public/: privacy.txt  tonconnect-manifest.json  tos.txt
app/src/: App.tsx  index.css  index.tsx  initEditor.ts  initMiniApp.ts  mockEnv.ts  saveImageIndex.ts
app/src/components/: Banner.tsx  BrushPicker.tsx  EnvUnsupported.tsx  ErrorBoundary.tsx  ExclusivesBanner.tsx  Link.tsx  Modal.tsx  Nav.tsx  Page.tsx  Root.tsx  Section.tsx  TosModal.tsx  WithSwr.tsx
app/src/components/ToolMenu/: ToolMenu.tsx  ToolMenuButton.tsx
app/src/model/: ItemData.ts
app/src/model/editor/: index.ts  useEditor.tsx
app/src/pages/TONConnectPage/: TONConnectPage.tsx
app/src/routes/: index.tsx
app/src/routes/collection/: InfoModal.tsx  Item.tsx  ItemList.tsx  MyCollection.tsx  index.tsx
app/src/routes/editor/: BakeModal.tsx  Canvas.tsx  DownloadMenu.tsx  EditorMenu.tsx  Pixel.tsx  UploadMenu.tsx  index.tsx  replaceAlert.ts  useBakeButton.ts
app/src/routes/exclusives/: Exclusives.tsx  PurchaseExlusiveModal.tsx
app/src/routes/feed/: index.tsx
app/src/utils/: deviceStorage.ts  openConnectModal.ts  openLink.ts  toVoid.ts  tryFetch.ts  unreachable.ts  useObjectUrl.ts
contracts/: dino.tact  dna.tact  package-lock.json  package.json  tact.config.json
contracts/contracts/: claim.tact  collection.tact  destroy.tact  item.tact  safe_transferable.tact  store.tact
contracts/scripts/: bakeExclusive.ts  bakeGift.ts  bakePurchase.ts  deployClaim.ts  deployCollection.ts  deployStore.ts  pauseCollection.ts  printTestDna.ts  purchaseExclusive.ts  reportResale.ts  resumeCollection.ts  resumeStore.ts  setDisplaySettings.ts  setItemPrice.ts  setMinter.ts  setResaleReporter.ts  stopStore.ts  terminateStore.ts  topUpItem.ts  withdraw.ts
contracts/temp/testnet/: tonconnect.json
contracts/tests/: Claim.spec.ts  Collection.spec.ts  Item.spec.ts  SimpleCounter.spec.ts  Store.spec.ts  utils.ts
deploy/: docker-compose.yml  render-server.Dockerfile  rust-server.Dockerfile
deploy/nginx/templates/: default.conf.template
image-codec/: Cargo.toml
image-codec/pkg/: image_codec.d.ts  image_codec.js  image_codec_bg.js  image_codec_bg.wasm  image_codec_bg.wasm.d.ts  package.json
image-codec/src/: dna.rs  lib.rs  render.rs
render-server/: Cargo.toml  item_code.base64
render-server/src/: dna.rs  item_address.rs  main.rs  render.rs  storage.rs  viewer.rs
render-server/src/render/: colors.rs
rust-colors/: Cargo.toml
rust-colors/src/: lib.rs
simple-counter/: pnpm-lock.yaml  tact.config.json
simple-counter/contracts/: claim.tact  collection.tact  issuable.tact  item.tact  safe_transferable.tact  store.tact  utils.tact
simple-counter/scripts/: deployStore.ts
simple-counter/tests/: Claim.spec.ts  Collection.spec.ts  Item.spec.ts  Store.spec.ts  utils.ts
viewer/: Cargo.toml
viewer/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: dna.rs  lib.rs  pack.rs  parse.rs
