[workspace]
resolver = "3"
members = ["api-server", "wasm", "render-server", "rust-colors", "viewer"]

[workspace.dependencies]
abort-on-drop = "0.2.2"
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
bitvec = "1.0.1"
bytes = "1.10.1"
either = "1.15.0"
envy = "0.4.2"
fork_stream = "0.1.0"
futures = "0.3.31"
futures-retry = "0.6.0"
hex = "0.4.3"
image = "0.25.6"
itertools = "0.14.0"
js-sys = "0.3.80"
num-bigint = "0.4.6"
num-traits = "0.2.19"
phf = { version = "0.12.1", features = ["macros"] }
reqwest = { version = "0.12.23", features = ["json"] }
rust-s3 = "0.35.1"
sentry = { version = "0.41.0", features = ["anyhow"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.0", features = ["full"] }
tokio-rayon = "2.1.0"
tonlib-core = "0.26.1"
proc-macro2 = "1.0.101"
syn = "2.0.106"
quote = "1.0.40"
wasm-bindgen = "0.2.103"
