[package]
name = "render-server"
version = "0.1.0"
edition = "2024"

[dependencies]
viewer = { path = "../viewer" }
rust-colors = { path = "../rust-colors" }
anyhow.workspace = true
axum.workspace = true
bitvec.workspace = true
bytes.workspace = true
either.workspace = true
envy.workspace = true
futures.workspace = true
image.workspace = true
itertools.workspace = true
num-bigint.workspace = true
phf.workspace = true
rust-s3.workspace = true
sentry.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-rayon.workspace = true
tonlib-core.workspace = true
