[package]
name = "viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
abort-on-drop.workspace = true
anyhow.workspace = true
bytes.workspace = true
either.workspace = true
futures.workspace = true
futures-retry.workspace = true
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonlib-core.workspace = true
