[package]
name = "wasm"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-colors = { path = "../rust-colors" }
base64.workspace = true
bytes.workspace = true
bitvec.workspace = true
image.workspace = true
itertools.workspace = true
js-sys.workspace = true
num-traits.workspace = true
phf.workspace = true
tonlib-core.workspace = true
wasm-bindgen.workspace = true
